<resources>
    <string name="app_name">Restoran</string>
    <string name="savaris_resto">Savaris Resto</string>
    <string name="nikmati_masakan_tiap_daerah">nikmati masakan tiap daerah</string>
    <string name="register">register</string>
    <string name="Register">Register</string>
    <string name="full_name">Full Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="title_activity_daily_meal_fragment2">DailyMealFragment2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="open_maps">Open Maps</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_cart">my_cart</string>
    <string name="mycart">mycart</string>
    <string name="my_card">My Card</string>
    <string name="daily_meal">Daily Meal</string>
    <string name="about">about</string>
    <string name="product_name">Product Name</string>
    <string name="_10_00_23_00_wib">10.00 - 23.00 Wib</string>
</resources>