<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.restoran.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_daily_meal"
        android:name="com.example.restoran.ui.gallery.DailyMealFragment"
        android:label="@string/daily_meal"
        tools:layout="@layout/daily_meal_fragment" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.restoran.ui.slideshow.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_my_cart"
        android:name="com.example.restoran.ui.MyCartFragment"
        android:label="@string/mycart"
        tools:layout="@layout/fragment_my_cart" />
</navigation>